gccida/g0/peephole2_optimize
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:3533:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[i].live_before = v1; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:3541:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[i].insn = 0LL; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:3542:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[4].insn = global_rtl[0]; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:3545:14: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
bitmap_copy( peep2_insn_data_0[4].live_before, live); 
             ^~~~~~~~~~~~~~~~~
             peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:3549:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
prev = ( rtx)insn[1]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:3554:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[peep2_current].insn = insn; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:3556:14: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
bitmap_copy( peep2_insn_data_0[peep2_current].live_before, live); 
             ^~~~~~~~~~~~~~~~~
             peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:3565:12: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
old_insn = peep2_insn_data_0[j].insn; 
           ^~~~~~~~~~~~~~~~~
           peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:3587:26: error: assigning to 'uint64' (aka 'unsigned long long') from incompatible type 'struct rtx_def'
*( _QWORD *)&new_insn[4] = old_insn[4]; 
                         ^ ~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:3588:63: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( note_0 = old_insn[3].fld[0].rtx; note_0; note_0 = ( rtx)note_0[1] ) 
                                                              ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:3595:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)note_0 + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:3606:12: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
old_insn = peep2_insn_data_0[j].insn; 
           ^~~~~~~~~~~~~~~~~
           peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:3616:23: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
note = find_reg_note( peep2_insn_data_0[i].insn, REG_EH_REGION, 0LL); 
                      ^~~~~~~~~~~~~~~~~
                      peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:3617:31: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
trya = emit_insn_after( trya, peep2_insn_data_0[i].insn); 
                              ^~~~~~~~~~~~~~~~~
                              peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:3618:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
before_try = ( rtx)insn[1]; 
                   ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:3619:26: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
delete_insn_chain( insn, peep2_insn_data_0[i].insn); 
                         ^~~~~~~~~~~~~~~~~
                         peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:3624:44: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( x = trya; x != before_try; x = ( rtx)x[1] ) 
                                           ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:3655:20: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
bitmap_copy( live, peep2_insn_data_0[i].live_before); 
                   ^~~~~~~~~~~~~~~~~
                   peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:3663:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[i].insn = x; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peephole2_optimize/src/obj/recog.o] Error 1
